--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap;400&display=swap');
+
+body, html {
+    font-family: 'Raleway', sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+}
+
 body {
   padding: 0;
   margin: 0;
