--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   height: 200px;
-  background: #21325e;
+  background: #726967;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,7 +13,7 @@
 .socialMedia svg {
   color: white;
   margin: 20px;
-  font-size: 70px;
+  font-size: 50px;
   cursor: pointer;
 }
 
