--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,7 @@
 .home {
   width: 100%;
   align-items: center;
-  font-family: "Arial", sans-serif;
+  font-family: "Raleway", sans-serif;
   color: #3e497a;
 }
 
@@ -13,14 +13,15 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #21325e;
+  background-color: #726967;
   color: #f0f0f0;
 }
 
 .about h2 {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 80px;
-  color: #e9d35b;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 50px;
+  color: #D2D2B4;
   height: 50px;
 }
 
@@ -63,6 +64,7 @@
 
   .about .prompt {
     margin-top: 10px;
+    margin-bottom: 50px;
     font-size: 20px;
     width: 80%;
   }
