--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,21 +7,21 @@
 
 .about {
   width: 100%;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 150px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #726967;
+  background-color: #C1B8B1;
   color: #f0f0f0;
 }
 
 .about h2 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Merriweather", sans-serif;
   font-weight: bold;
   font-size: 50px;
-  color: #D2D2B4;
+  color: white;
   height: 50px;
 }
 
