--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -9,7 +9,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   color: white;
 }
 
