added links to social icons on Home and Footer components

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -35,6 +35,12 @@
   color: white;
 }
 
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .skills {
   font-size: 35px;
   width: 100%;
