--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -10,6 +10,12 @@
   margin-top: 200px;
 }
 
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .socialMedia svg {
   color: white;
   margin: 20px;
