color, style, font changes, add image

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@
   text-align: center;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
 
 body, html {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
 }
