--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   height: 200px;
-  background: #2f9685;
+  background: #579d91;
   display: flex;
   justify-content: center;
   align-items: center;
